# MaktabFlaskGroupProject

./: .gitignore  README.rst  app.py  requirements.txt  sample_ini  setup.cfg
Maktab_Group_Flask_Project/: API.py  __init__.py  auth.py  blog.py  db.py  home.py  models.py  user.py
Maktab_Group_Flask_Project/static/css/: login.css  main.css  tagsinput.css
Maktab_Group_Flask_Project/static/js/: deactivate_delete_post.js  like_or_dis_like.js  login.js  main.js  register.js
Maktab_Group_Flask_Project/templates/: base.html  base_login_restore.html  intro.html
Maktab_Group_Flask_Project/templates/auth/: index.html  login.html  register.html  restore.html  set_password.html
Maktab_Group_Flask_Project/templates/blog/: admin.html  blog.html  page_not_found.html  post.html
Maktab_Group_Flask_Project/templates/blog/auth/: base_login_restore.html  login.html  register.html  restore.html
Maktab_Group_Flask_Project/templates/home/: home.html
Maktab_Group_Flask_Project/templates/user/: create.html  create_edit_base.html  edit_post.html  edit_profile.html  post_list.html  profile.html  user_profile.html
Maktab_Group_Flask_Project/utils/: extra_functions.py  filters.py
instance/: config.py
