[metadata]
name = Maktab_Group_Flask_Project
version = 1.0.0
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = ashkanzare77@gmail.com
description = Blog App
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    flask_mongoengine

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    Maktab_Group_Flask_Project